update client.app_config setter

--- a/scripts/oauth2-sinatra/views/index.erb
+++ b/scripts/oauth2-sinatra/views/index.erb
@@ -45,6 +45,7 @@ var oauth = new Auth3l();
 		<p>To run this demo use the following command:</p>
 		<p>$ ruby oauth.rb</p>
 		<p><input type="button" onclick="oauth.authorize()" value="Login with RingCentral"></p>
+        <p>App Key: <%= app_key %></p>
 		<p>Authorization URL: <%= authorize_url %></p>
 		<p>Redirect URL: <%= redirect_uri %></p>
 	</body>
